# Kelebek-App

./: .env  .gitignore  COMMIT_UPDATES.txt  Kelebek.spec  KelebekApp.spec  README.md  database.db  deneme.py  encryption.py  gradelistwidget_sampe.py  main.py  pyproject.toml  q  qrc_resources.py  rc_resources.py  requirements.txt  resources.qrc  salon_oturma_duzenleri.html  sil.py  zoom.html
ATTACHES/: .$diyagram.bkp  .$diyagram.dtmp  ogrenciler.xls
App/: __init__.py  _shuffle.py  database.db  database.py  deploy.py  deploy_old.py  deploy_yedek.py  excel_reader.py  licence_dialogs.py  logs.py  main_window.py  shuffle.py  shuffle_demo.py  statistics.py  stylesheets.py  windows.py
Client/: client.py  test.py
DemoLab/: _colors.py  css  deploy_demo.py  gradelistwidget_sampe.py  output.html  salon_duzenleri.html  students_html_sample.py
Forms/: arsivden_silme_onay_dialog.ui  ayarlar_dialog.ui  date_is_over_dialog.ui  ekle_duzenle_dialog.ui  lisans.ui  lisans.ui.autosave  lisans_dialog.ui  mainwindow.ui  no_internet_dialog.ui  ogrenciler_frame.ui  ogrenciler_silme_onay_dialog.ui  okul_bilgileri_frame.ui  onay_dialog.ui  salonlar_frame.ui  sinav_silme_onay_dialog.ui  sinavlar_frame.ui  sonuc_dialog.ui  ui_mainwindow.py  ui_okul_bilgileri_frame.py  ui_salonlar_frame.py  ui_sinavlar_frame.py  ui_yeni_sinav_frame.py  ui_yeni_sinav_frame_demo.py  yeni_sinav_base_frame.ui  yeni_sinav_bilgileri_frame.ui  yeni_sinav_frame.ui  yeni_sinav_frame_demo.ui  yeni_sinav_sinavlar_frame.ui  yetersiz_yer_dialog.ui
Server/: server.py
To remember/: TODO.txt  settings.txt
(+254 files in other folders)
